--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     </div>
     
-    <div class="iframe-container">
+    <div class="iframe-container" style="height=100%">
         <!-- 在这里修改src属性为您想要嵌入的网页URL -->
         <iframe id="embedded-page" src="https://m.fyqs.cn"></iframe>
     </div>
