--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     
     <div class="iframe-container" style="height:100%">
         <!-- 在这里修改src属性为您想要嵌入的网页URL -->
-        <iframe id="embedded-page" src="https://m.fyqs.cn"></iframe>
+        <iframe id="embedded-page" src="https://m.fyqs.cn" style="height:100%"></iframe>
     </div>
     
     <div class="footer">
